# segmentation-fault-repro

./: Cargo.toml  README.md
src/: main.rs
