[package]
name = "segmentation-fault-repro"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.2"
jemallocator = "0.3.2"
tokio = { version = "0.2.4", features = ["full"] }
